added covariance simulation to rps eval method

--- a/notebooks/aduriseti_shared/rps_est_taboola.ipynb
+++ b/notebooks/aduriseti_shared/rps_est_taboola.ipynb
@@ -1554,37 +1554,8 @@
     "df = rps_df[[\"rps_quantile_i\",\"rps_cluster_i\"]] * bucket_rps[[\"rps_quantile_i\",\"rps_cluster_i\"]]\n",
     "rps_df[[\"rps_quantile_i\",\"rps_cluster_i\"]] = df.reset_index().set_index(rps_df.index.names)\n",
     "rps_df[[\"rps_quantile_i\",\"rps_cluster_i\"]] = rps_df[[\"rps_quantile_i\",\"rps_cluster_i\"]].fillna(-1)\n",
-    "print(\"|rps_df|\",rps_df.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "traffic_source  campaign_id  dma  operating_system  device   keyword                               utc_dt    \n",
-       "BING            141948575    508  MacIntel          DESKTOP  +highmark +supplement                 2021-05-30    0.000000\n",
-       "                             803  iPhone            MOBILE   +united +health +care +for +medicare  2021-04-26    0.032391\n",
-       "                141948576    505  MacIntel          DESKTOP  usaa supplemental health insurance    2021-04-03    0.011111\n",
-       "                                                                                                   2021-04-14    0.010648\n",
-       "                                                                                                   2021-04-29    0.028049\n",
-       "                                                                                                                   ...   \n",
-       "GOOGLE          11127071195  501  Linux x86_64      MOBILE   +medigap                              2021-04-04    0.197485\n",
-       "                11139969240  618  Linux armv7l      TABLET   +senior +health +insurance            2021-04-04    3.518849\n",
-       "                             811  Win32             DESKTOP  +senior +care +insurance              2021-04-03    1.611708\n",
-       "                11183984795  506  iPad              TABLET   +medigap +under +65                   2021-04-04    0.459486\n",
-       "MEDIAALPHA      23893        744  Linux aarch64     MOBILE   Presidio Interactive                  2021-06-01    0.247143\n",
-       "Name: rps_quantile, Length: 636, dtype: float64"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "print(\"|rps_df|\",rps_df.shape)\n",
+    "\n",
     "rps_df[\"sessions_quantile\"] = rps_df \\\n",
     "    .groupby([\"rps_quantile_i\",\"utc_dt\"]) \\\n",
     "    [\"sessions\"].transform(sum)\n",
@@ -1595,37 +1566,8 @@
     "        [[\"rps_avg\",\"rpl\",\"lps\",\"score_avg\",\n",
     "          \"score_null_avg\",\"score_adv_avg\",\"score_supp_avg\"]] \\\n",
     "        .transform(get_wavg_by(rps_df,\"sessions\"))\n",
-    "ipydisp(rps_df[\"rps_quantile\"].drop_duplicates())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "traffic_source  campaign_id  dma  operating_system  device   keyword                               utc_dt    \n",
-       "BING            141948575    508  MacIntel          DESKTOP  +highmark +supplement                 2021-05-30     0.000000\n",
-       "                             803  iPhone            MOBILE   +united +health +care +for +medicare  2021-03-13     0.249125\n",
-       "                                                                                                   2021-03-24     0.327863\n",
-       "                                                                                                   2021-04-17     0.250000\n",
-       "                                                                                                   2021-04-20     0.190617\n",
-       "                                                                                                                   ...    \n",
-       "YAHOO           361534092    510  Win32             DESKTOP  healthcare gov                        2021-03-28    13.500000\n",
-       "                             524  Win32             DESKTOP  healthcare gov                        2021-04-08    79.180000\n",
-       "                             612  MacIntel          DESKTOP  healthcare gov                        2021-03-13     1.590000\n",
-       "                361534096    528  Win32             DESKTOP  +ambetter +insurance                  2021-04-10     2.180000\n",
-       "                361611685    524  MacIntel          DESKTOP  +medical +insurance +georgia          2021-05-12     5.960000\n",
-       "Name: rps_cluster, Length: 859, dtype: float64"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "ipydisp(rps_df[\"rps_quantile\"].drop_duplicates())\n",
+    "\n",
     "rps_df[\"sessions_cluster\"] = rps_df \\\n",
     "    .groupby([\"rps_cluster_i\",\"utc_dt\"]) \\\n",
     "    [\"sessions\"].transform(sum)\n",
