notes from mtg w/ jdvalle

--- a/notebooks/aduriseti_shared/rps_est.ipynb
+++ b/notebooks/aduriseti_shared/rps_est.ipynb
@@ -972,7 +972,14 @@
     "session_df[\"keyword_clust\"] = cluster_on(session_df,start_date,eval_date,end_date,[\"campaign_id\",\"keyword\"],CLUSTS=6)\n",
     "# session_df[\"keyword_clust\"] = cluster_on(session_df,start_date,eval_date,end_date,[\"keyword\"],CLUSTS=6)\n",
     "\n",
-    "session_df[\"loc_platform_clust\"] = cluster_on(session_df,start_date,eval_date,end_date,[\"dma\",\"operating_system\",\"device\"],CLUSTS=6)"
+    "# session_df[\"demographic_clust\"] = cluster_on(session_df,start_date,eval_date,end_date,[\"age\",\"household_size\",\"etc...\"],CLUSTS=6)\n",
+    "\n",
+    "\n",
+    "session_df[\"loc_platform_clust\"] = cluster_on(session_df,start_date,eval_date,end_date,[\"dma\",\"operating_system\",\"device\"],CLUSTS=6)\n",
+    "session_df[\"loc_platform_mod\"] = session_df.groupby([\"loc_platform_clust\",\"utc_dt\"])[\"rps\"].transform(\"mean\") / \\\n",
+    "                        session_df.groupby(\"utc_dt\")[\"rps\"].transorfm(\"mean\")\n",
+    "\n",
+    "ession_df[\"clust_clust\"] = cluster_on(session_df,start_date,eval_date,end_date,[\"keyword_clust\",\"loc_platform_clust\"],CLUSTS=6)"
    ]
   },
   {
@@ -2146,7 +2153,7 @@
    ],
    "source": [
     "# some discontinued campaigns looks like - makes eval on product of camapgin and keyword difficult\n",
-    "rps_df_taboola[\"keyword_clust\"] = cluster_on(rps_df_taboola,start_date,eval_date,end_date,[\"campaign_id\",\"keyword\"],CLUSTS=6)\n",
+    "rps_df_taboola[\"keyword_clust\"] = cluster_on(rps_df_taboola,`start_date,eval_date,end_date,[\"campaign_id\",\"keyword\"],CLUSTS=6)\n",
     "# session_df[\"keyword_clust\"] = cluster_on(session_df,start_date,eval_date,end_date,[\"keyword\"],CLUSTS=6)\n",
     "\n",
     "rps_df_taboola[\"loc_platform_clust\"] = cluster_on(rps_df_taboola,start_date,eval_date,end_date,[\"dma\",\"operating_system\",\"device\"],CLUSTS=6)"
@@ -2916,6 +2923,77 @@
     "        \"sessions\": \"mean\",\n",
     "        \"rps\": get_wavg_by(clust_kpi_df,\"sessions\")\n",
     "    })"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2021-06-23: @aduriset @jdelvalle\n",
+    "- want to measure correlation/dependence of categorical split vars w/ cont rps\n",
+    "    - cat,cat metrics w/ binned rps\n",
+    "        chi\n",
+    "    - cont,cont metrcs w/ 1 hot encoded split vars\n",
+    "    - cat,cont metrics\n",
+    "- correlation metrics\n",
+    "    - MI:\n",
+    "        - sklearn.feature_selection.mi_regression\n",
+    "        - would need AFAICT to rresample input arrays\n",
+    "    - ANOVA:\n",
+    "        - scipy.stats.f_oneway\n",
+    "    - pt biserial\n",
+    "        - needs binary vars tho\n",
+    "        - https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.pointbiserialr.html\n",
+    "        - https://towardsdatascience.com/point-biserial-correlation-with-python-f7cd591bd3b1\n",
+    "\n",
+    "\n",
+    "- approaches I tried\n",
+    "1. rank splits by their correlation/covaraince/MI w/ `agg_rps`\n",
+    "    - tried ANOVA,pt.biserial,MI - had most success w/ MI\n",
+    "    - was dificult to compute b/c couldnt find methods that accepted sample weight\n",
+    "    - MI approach was promising but didnt go down that route\n",
+    "2. rank splits by intra-split agg_rps variance\n",
+    "    - had most success w/ this\n",
+    "    - tested out an approahc where I cluster the split on rps - had good results\n",
+    "    - think this is the mtd to use going forward\n",
+    "    TODO:\n",
+    "    - test fitting on general traffic sources?\n",
+    "    - test clustering on multiple days of rps data - \n",
+    "        or rolling rps data or something\n",
+    "    - try out more granular aggs\n",
+    "    - is there some kind of metric which measures total variance\n",
+    "        and computes how much of that variance is captured by a split?\n",
+    "\n",
+    "3. fit decision tree on rps data \n",
+    "    - MSE criterion is apparently the same as minimizng inter split variance\n",
+    "    - computationally intensive\n",
+    "    - not 100% clear how to go from tree to campaign structure\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "- overall goal:\n",
+    "    - specific ROI targetting w/ minimal campaigns\n",
+    "- what this means for accnt structure\n",
+    "    - for many variables we must split campaigns to target ROI\n",
+    "    - want to capture greatest amt of rps variation w/ \n",
+    "        fewest # of campaigns\n",
+    "- 2 ways of approaching this\n",
+    "    1. minimize rps variation w/in a campaign\n",
+    "        - i.e. after campaign split want to minimize rps variance w/in campaigns\n",
+    "        => i actually think this is eq to decision tree regression w/ split criterion MSE\n",
+    "        https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeRegressor.html\n",
+    "        - tried this out a little - but the computation was intensive which made it slow going\n",
+    "    2. maximize rps variation outside campaigns\n",
+    "        - mostly focused on this approach\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# wstd(rps_clust_df[\"rps_avg\"], rps_clust_df[\"sessions\"])"
    ]
   },
   {
