--- a/notebooks/aduriseti_shared/account_structure.ipynb
+++ b/notebooks/aduriseti_shared/account_structure.ipynb
@@ -77,14 +77,15 @@
     "from utils.env import load_env_from_aws\n",
     "load_env_from_aws()\n",
     "\n",
+    "import pprint\n",
+    "from IPython.display import display as ipydisp    \n",
+    "import pandas as pd\n",
+    "import collections\n",
+    "import itertools\n",
     "import datetime\n",
-    "from notebooks.aduriseti_shared.utils import *\n",
     "\n",
-    "TABOOLA = \"TABOOLA\"\n",
-    "MEDIA_ALPHA = \"MEDIAALPHA\"\n",
-    "BING = \"BING\"\n",
-    "U65 = \"HEALTH\"\n",
-    "O65 = 'MEDICARE'\n",
+    "from models.utils import wavg,get_wavg_by\n",
+    "from notebooks.aduriseti_shared.utils import *\n",
     "\n",
     "NOW = datetime.datetime.now()\n",
     "DAY = datetime.timedelta(days=1)\n",
@@ -117,73 +118,6 @@
     "    location_device=[\"state\", \"dma\", \"device\", ],\n",
     "    location_os_device = [\"state\", \"dma\", \"operating_system\",\"device\"],\n",
     ")\n",
-    "\n",
-    "taboola_val_map = {\n",
-    "    \"device\": {\n",
-    "        'DESKTOP': 'DESK',\n",
-    "        'MOBILE': 'PHON',\n",
-    "        'TABLET': 'TBLT',\n",
-    "    },\n",
-    "    \"operating_system\": {\n",
-    "        'Linux armv7l': \"Linux\",\n",
-    "        'Linux armv8l': \"Linux\",\n",
-    "        'Linux x86_64': \"Linux\",\n",
-    "        'MacIntel': 'Mac OS X',\n",
-    "        'Win32': \"Windows\",\n",
-    "        'iPad': \"iPadOS\",\n",
-    "        'iPhone': \"iOS\",\n",
-    "        '': None,\n",
-    "        'ARM': None,\n",
-    "        'Android': 'Android',\n",
-    "        'Linux aarch64': \"Linux\",\n",
-    "        'Win64': \"Windows\",\n",
-    "        'Linux armv7': \"Linux\",\n",
-    "        'Linux i686': \"Linux\",\n",
-    "        'Windows': \"Windows\",\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "def translate_taboola_vals(df):\n",
-    "    index_cols = df.index.names\n",
-    "    df = df.reset_index()\n",
-    "    for c in df.columns:\n",
-    "        if c in taboola_val_map:\n",
-    "            df[c] = df[c].apply(taboola_val_map[c].__getitem__)\n",
-    "    df_bkp = df\n",
-    "    df = df \\\n",
-    "        .groupby(index_cols) \\\n",
-    "        .agg({\n",
-    "            \"sessions\": sum,\n",
-    "            \"num_leads\": sum,\n",
-    "            \"lps_avg\": get_wavg_by(df,\"sessions\"),\n",
-    "            \"rpl_avg\": get_wavg_by(df,\"sessions\"),\n",
-    "            \"rps_avg\": get_wavg_by(df,\"sessions\"),\n",
-    "        })\n",
-    "    df[\"int_ix\"] = range(len(df))\n",
-    "    df_bkp_wavg = wavg(df_bkp[[\"lps_avg\",\"rpl_avg\",\"rps_avg\"]],\n",
-    "                        df_bkp[\"sessions\"].values.reshape(-1, 1))\n",
-    "    df_wavg = wavg(df[[\"lps_avg\",\"rpl_avg\",\"rps_avg\"]],\n",
-    "                    df[\"sessions\"].values.reshape(-1, 1))\n",
-    "    assert all((df_bkp_wavg - df_wavg).abs() < 1e-2), (df_bkp_wavg,df_wavg)\n",
-    "    return df\n",
-    "\n",
-    "import pprint\n",
-    "from IPython.display import display as ipydisp    \n",
-    "import pandas as pd\n",
-    "from models.utils import wavg\n",
-    "import collections\n",
-    "import itertools\n",
-    "\n",
-    "def wvar(V,W):\n",
-    "    mu = wavg(V,W)\n",
-    "    var = wavg((V - mu)**2,W)\n",
-    "    return var\n",
-    "def wstd(V,W):\n",
-    "    return wvar(V,W)**0.5\n",
-    "def get_wavg_by(df, col):\n",
-    "    def wavg_by(V):\n",
-    "        return wavg(V, W=df.loc[V.index, col])\n",
-    "    return wavg_by\n",
     "\n",
     "def get_wthresh(W,p):\n",
     "    W = rps_df[\"sessions\"].sort_values(ascending=False)\n",
@@ -297,8 +231,15 @@
     "    _,new_index_order = zip(*sorted((V.__len__(),c) for c,V in split_attr2unique_vals.items()))\n",
     "    nclusts = rps_df[\"clust\"].unique().__len__()\n",
     "    split_factor = nclusts * np.prod([1] + [split_attr2unique_vals[c].__len__() for c in new_index_order[:-1]])\n",
-    "    return split_factor\n",
-    "\n",
+    "    return split_factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "perfD = []\n",
     "for split in campaign_split_fields.keys():\n",
     "    rps_df_fit,rps_df_eval,rps_clust_df = cluster_split(split)\n",
@@ -333,11 +274,9 @@
     "\n",
     "rps_df_fit, rps_df_eval, rps_clust_df = cluster_split(BEST_SPLIT)\n",
     "rps_df = rps_df_fit\n",
-    "get_split_factor(rps_df)\n",
-    "orig_index = rps_df.index.names\n",
-    "split_attr2unique_vals = {index_col: rps_df.index.unique(index_col) for index_col in orig_index}\n",
+    "split_attr2unique_vals = {index_col: rps_df.index.unique(index_col) \n",
+    "                          for index_col in rps_df.index.names}\n",
     "_,new_index_order = zip(*sorted((V.__len__(),c) for c,V in split_attr2unique_vals.items()))\n",
-    "rps_df = rps_df .reset_index()\n",
     "campaign_df = rps_df \\\n",
     "    .groupby([*new_index_order[:-1], \"clust\"]) \\\n",
     "    .agg({\n",
@@ -384,6 +323,99 @@
     "\n",
     "camp_df = pd.DataFrame(camps)\n",
     "camp_df.to_csv(\"campaign_dump.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import scipy.stats\n",
+    "import sklearn.feature_selection\n",
+    "import sklearn.metrics\n",
+    "from matplotlib import pyplot as plt\n",
+    "import sklearn.preprocessing\n",
+    "\n",
+    "requires_campaign_split = [\n",
+    "    # \"browser\",\n",
+    "    \"operating_system\",\n",
+    "    \"device\",\n",
+    "    # \"channel\", # not actually sure what this is\n",
+    "    # \"domain\",\n",
+    "    \"product\",\n",
+    "    # \"landing_page\",\n",
+    "    \"location\",\n",
+    "]\n",
+    "\n",
+    "for split in requires_campaign_split:\n",
+    "    rps_df = split2aggrps[split] .reset_index()\n",
+    "    Xs = rps_df \\\n",
+    "        .apply(lambda r: [r[\"int_ix\"]]*int(r[\"sessions\"]), axis=1)\n",
+    "    X = np.concatenate(Xs.values).reshape(-1,1)\n",
+    "    ys = rps_df \\\n",
+    "        .apply(lambda r: [r[\"rps_avg\"]]*int(r[\"sessions\"]),axis=1)\n",
+    "    y = np.concatenate(ys.values)\n",
+    "    # print(y.min(),np.quantile(y, 0.5),y.max())\n",
+    "    y = y > y.mean()\n",
+    "    # y = np.concatenate(ys.values).reshape(-1,1)\n",
+    "    # y = sklearn.preprocessing.KBinsDiscretizer(n_bins=2,encode=\"ordinal\") \\\n",
+    "    #     .fit_transform(y).reshape(-1)\n",
+    "    mi = sklearn.feature_selection.mutual_info_regression(X,y,discrete_features=True)\n",
+    "    print(split,mi,y.mean(),rps_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import scipy.stats\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "requires_campaign_split = [\n",
+    "    \"browser\",\n",
+    "    \"operating_system\",\n",
+    "    \"device\",\n",
+    "    # \"channel\", # not actually sure what this is\n",
+    "    # \"domain\",\n",
+    "    \"product\",\n",
+    "    # \"landing_page\",\n",
+    "    \"location\",\n",
+    "]\n",
+    "combined_rps_df = pd.concat([df.reset_index() for df in split2aggrps.values()])\n",
+    "splitI = combined_rps_df[\"split_on\"].isin(requires_campaign_split)\n",
+    "density = scipy.stats.gaussian_kde(\n",
+    "    dataset=combined_rps_df.loc[splitI,\"rps_avg\"],\n",
+    "    weights=combined_rps_df.loc[splitI, \"sessions\"],\n",
+    "    # bw_method=\"scott\",\n",
+    "    # bw_method=\"silverman\",\n",
+    "    # bw_method=0.1,\n",
+    ")\n",
+    "xs = np.linspace(0,2,100)\n",
+    "plt.plot(xs,density(xs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for split in requires_campaign_split:\n",
+    "    splitI = combined_rps_df[\"split_on\"] == split\n",
+    "    density = scipy.stats.gaussian_kde(\n",
+    "        dataset=combined_rps_df.loc[splitI, \"rps_avg\"],\n",
+    "        weights=combined_rps_df.loc[splitI, \"sessions\"])\n",
+    "    xs = np.linspace(0, 2, 100)\n",
+    "    plt.plot(xs, density(xs))\n",
+    "    plt.title(split)\n",
+    "    plt.show()"
    ]
   }
  ],
