setup taboola creds in aws secret manager

--- a/notebooks/aduriseti_shared/account_structure.ipynb
+++ b/notebooks/aduriseti_shared/account_structure.ipynb
@@ -7466,20 +7466,12 @@
     }
    ],
    "source": [
-    "import pytaboola\n",
-    "# hc creds\n",
-    "hccreds = {\n",
-    "  \"client_id\": \"3cc90f549fd44a9fbe36f70aa6e7cfde\",\n",
-    "  \"client_secret\": \"eaa74a94108648579e65167bf276c3a1\",\n",
-    "}\n",
-    "# pivot creds\n",
-    "pivotcreds = {\n",
-    "  \"client_id\": \"31d7f068eb3d43acb85b5ad64eef2ca9\",\n",
-    "  \"client_secret\": \"c5010044df194010817e76edac0fd426\",\n",
-    "}\n",
+    "import json\n",
+    "TABOOLA_HC_CREDS = json.loads(os.getenv(\"TABOOLA_HC_CREDS\"))\n",
+    "TABOOLA_PIVOT_CREDS = json.loads(os.getenv(\"TABOOLA_PIVOT_CREDS\"))\n",
     "\n",
     "from pytaboola import TaboolaClient\n",
-    "client = TaboolaClient(**hccreds)\n",
+    "client = TaboolaClient(**TABOOLA_HC_CREDS)\n",
     "client.token_details\n",
     "\n",
     "import requests\n",
@@ -7508,23 +7500,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hc creds\n",
-    "hccreds = {\n",
-    "  \"client_id\": \"3cc90f549fd44a9fbe36f70aa6e7cfde\",\n",
-    "  \"client_secret\": \"eaa74a94108648579e65167bf276c3a1\",\n",
-    "}\n",
-    "# pivot creds\n",
-    "pivotcreds = {\n",
-    "  \"client_id\": \"31d7f068eb3d43acb85b5ad64eef2ca9\",\n",
-    "  \"client_secret\": \"c5010044df194010817e76edac0fd426\",\n",
-    "}\n",
+    "import json\n",
+    "\n",
+    "TABOOLA_HC_CREDS = json.loads(os.getenv(\"TABOOLA_HC_CREDS\"))\n",
+    "TABOOLA_PIVOT_CREDS = json.loads(os.getenv(\"TABOOLA_PIVOT_CREDS\"))\n",
     "\n",
     "from pytaboola import TaboolaClient\n",
-    "client = TaboolaClient(**hccreds)\n",
+    "client = TaboolaClient(**TABOOLA_HC_CREDS)\n",
     "client.token_details\n",
     "\n",
     "from pytaboola.services import AccountService\n",
@@ -7545,18 +7531,25 @@
     "id2accnt = {a[\"account_id\"]: a for a in accnts}\n",
     "\n",
     "def accnt_camps(accnt):\n",
-    "  camp_service = CampaignService(client, accnt[\"account_id\"])\n",
-    "  return camp_service.list()\n",
+    "    camp_service = CampaignService(client, accnt[\"account_id\"])\n",
+    "    return camp_service.list()\n",
     "aid2cid2camp = {}\n",
     "for aid,a in tqdm.tqdm(id2accnt.items()):\n",
-    "  cid2camp = {c[\"id\"]: c for c in accnt_camps(a)}\n",
-    "  aid2cid2camp[aid] = cid2camp\n",
+    "    cid2camp = {c[\"id\"]: c for c in accnt_camps(a)}\n",
+    "    aid2cid2camp[aid] = cid2camp\n",
     "\n",
     "import json\n",
     "json.dump(aid2cid2camp, open(\"camps.json\", \"w\"))\n",
     "O65_accnt_camps = accnt_camps(id2accnt[O65_ACCNT_ID])\n",
-    "print(\"|065_accnt_camps|:\",len(O65_accnt_camps))\n",
-    "#%%\n",
+    "print(\"|065_accnt_camps|:\",len(O65_accnt_camps))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import itertools\n",
     "cross = itertools.product\n",
     "import jmespath\n",
@@ -7574,35 +7567,35 @@
     "test_accnt_camp_names = {c[\"name\"] for c in test_accnt_camps}\n",
     "print(\"|test_accnt_camps|:\",len(test_accnt_camps))\n",
     "def copy_campaign_base(camp,to=TEST_ACCNT_ID):\n",
-    "  taboola_req_fields = [\n",
+    "    taboola_req_fields = [\n",
     "    \"name\",\"branding_text\",\"cpc\",\"spending_limit\",\n",
     "    \"spending_limit_model\",\"marketing_objective\"]\n",
-    "  camp_svc = CampaignService(client,to)\n",
-    "  camp_base = {f: camp[f] for f in taboola_req_fields}\n",
-    "  camp_copy = camp_svc.create(**camp_base)\n",
-    "  print(f\"created base for `{camp['name']}` in account `{to}` w/ id:\", camp_copy[\"id\"])\n",
-    "  camp_copy = camp_svc.update(camp_copy[\"id\"], is_active=False)\n",
-    "  assert camp_copy[\"is_active\"] == False\n",
-    "  print(\"...succesfully deactivated newly created campaign\")\n",
-    "  return camp_copy\n",
+    "    camp_svc = CampaignService(client,to)\n",
+    "    camp_base = {f: camp[f] for f in taboola_req_fields}\n",
+    "    camp_copy = camp_svc.create(**camp_base)\n",
+    "    print(f\"created base for `{camp['name']}` in account `{to}` w/ id:\", camp_copy[\"id\"])\n",
+    "    camp_copy = camp_svc.update(camp_copy[\"id\"], is_active=False)\n",
+    "    assert camp_copy[\"is_active\"] == False\n",
+    "    print(\"...succesfully deactivated newly created campaign\")\n",
+    "    return camp_copy\n",
     "for camp in active_camps:\n",
-    "  # skip already created test account campaigns\n",
-    "  if camp[\"name\"] in test_accnt_camp_names: \n",
+    "    # skip already created test account campaigns\n",
+    "    if camp[\"name\"] in test_accnt_camp_names: \n",
     "    print(f\"Campaign `{camp['name']}` already exists in account `{TEST_ACCNT_ID}`\")\n",
-    "  else:\n",
+    "    else:\n",
     "    camp_copy = copy_campaign_base(camp,to=TEST_ACCNT_ID)\n",
     "#%%\n",
     "#%%\n",
     "[c[\"status\"] for c in test_accnt_camps]\n",
     "#%%\n",
     "def get_camp_by_name(name,accnt=TEST_ACCNT_ID):\n",
-    "  # TODO: figure out some way to avoid having to refetch all campaigns\n",
-    "  #       => will be able to use catalog tables eventually\n",
-    "  camp_svc = CampaignService(client, accnt)\n",
-    "  camps = camp_svc.list()\n",
-    "  match_camps = [c for c in camps if c[\"name\"] == name]\n",
-    "  assert len(match_camps) == 1, (name,len(match_camps))\n",
-    "  return match_camps[0]\n",
+    "    # TODO: figure out some way to avoid having to refetch all campaigns\n",
+    "    #       => will be able to use catalog tables eventually\n",
+    "    camp_svc = CampaignService(client, accnt)\n",
+    "    camps = camp_svc.list()\n",
+    "    match_camps = [c for c in camps if c[\"name\"] == name]\n",
+    "    assert len(match_camps) == 1, (name,len(match_camps))\n",
+    "    return match_camps[0]\n",
     "import pytaboola\n",
     "pytaboola.errors.TaboolaError\n",
     "import traceback\n",
@@ -7610,33 +7603,33 @@
     "field_update_attempts = {}\n",
     "field_update_errors = {}\n",
     "def update_fields(camp,accnt,camp_id):    \n",
-    "  camp_svc = CampaignService(client, accnt)\n",
-    "  for k,attr in tqdm.tqdm([*camp.items()]):\n",
+    "    camp_svc = CampaignService(client, accnt)\n",
+    "    for k,attr in tqdm.tqdm([*camp.items()]):\n",
     "    # print(f\"attempting to copy over field `{k}`...\")\n",
     "    try:\n",
-    "      camp_svc.update(camp_id,**{k: attr})\n",
-    "      field_update_attempts.setdefault(k,[]).append(1)\n",
-    "      # print(\"...Sucess!\")\n",
+    "        camp_svc.update(camp_id,**{k: attr})\n",
+    "        field_update_attempts.setdefault(k,[]).append(1)\n",
+    "        # print(\"...Sucess!\")\n",
     "    except (Exception,pytaboola.errors.TaboolaError) as ex:\n",
-    "      errd = {\n",
+    "        errd = {\n",
     "        \"ex\": ex,\n",
     "        \"type\": type(ex),\n",
     "        \"str\": str(ex),\n",
     "        \"tb\": traceback.format_exc()\n",
-    "      }\n",
-    "      # print(f\"Failed w/ {type(ex)}:{ex}\\n{traceback.format_exc()}\")\n",
-    "      # print(f\"Failed w/ {type(ex)}:{ex}\")\n",
-    "      field_update_attempts.setdefault(k, []).append(0)\n",
-    "      field_update_attempts.setdefault(k, []).append(errd)\n",
+    "        }\n",
+    "        # print(f\"Failed w/ {type(ex)}:{ex}\\n{traceback.format_exc()}\")\n",
+    "        # print(f\"Failed w/ {type(ex)}:{ex}\")\n",
+    "        field_update_attempts.setdefault(k, []).append(0)\n",
+    "        field_update_attempts.setdefault(k, []).append(errd)\n",
     "\n",
     "for camp in active_camps:\n",
-    "  dest_camp = get_camp_by_name(camp[\"name\"])\n",
-    "  dest_id = dest_camp[\"id\"]\n",
-    "  print(\"UPDATEING\",camp[\"name\"],dest_id)\n",
-    "  update_fields(camp,TEST_ACCNT_ID,dest_id)\n",
+    "    dest_camp = get_camp_by_name(camp[\"name\"])\n",
+    "    dest_id = dest_camp[\"id\"]\n",
+    "    print(\"UPDATEING\",camp[\"name\"],dest_id)\n",
+    "    update_fields(camp,TEST_ACCNT_ID,dest_id)\n",
     "\n",
     "update_attempt_df = pd.DataFrame(field_update_attempts)\n",
-    "update_attempt_df.mean(axis=0)\n"
+    "update_attempt_df.mean(axis=0)"
    ]
   },
   {
