stopped wasteful rolling calculation

--- a/notebooks/aduriseti_shared/account_structure.ipynb
+++ b/notebooks/aduriseti_shared/account_structure.ipynb
@@ -6767,64 +6767,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "TABOOLA_HC_CREDS = json.loads(os.getenv(\"TABOOLA_HC_CREDS\"))\n",
-    "TABOOLA_PIVOT_CREDS = json.loads(os.getenv(\"TABOOLA_PIVOT_CREDS\"))\n",
-    "\n",
-    "from pytaboola import TaboolaClient\n",
-    "client = TaboolaClient(**TABOOLA_HC_CREDS)\n",
-    "client.token_details\n",
-    "\n",
-    "import requests\n",
-    "import jmespath\n",
-    "TABOOLA_BASE = \"https://backstage.taboola.com/backstage/api/1.0\"\n",
-    "resp = requests.get(\n",
-    "    f\"{TABOOLA_BASE}/resources/campaigns_properties/operating_systems\",\n",
-    "    headers=client.authorization_header)\n",
-    "taboola_os = jmespath.search('results[].name',resp.json(),)\n",
-    "\n",
-    "resp = requests.get(\n",
-    "    f\"{TABOOLA_BASE}/resources/campaigns_properties/platforms\",\n",
-    "    headers=client.authorization_header)\n",
-    "taboola_platforms = jmespath.search('results[].name', resp.json(),)\n",
-    "\n",
-    "resp = requests.get(\n",
-    "    f\"{TABOOLA_BASE}/resources/countries/us/dma\",\n",
-    "    headers=client.authorization_header)\n",
-    "taboola_dmas = jmespath.search('results[].name',resp.json(),)\n",
-    "\n",
-    "resp = requests.get(\n",
-    "    f\"{TABOOLA_BASE}/resources/countries/us/regions\",\n",
-    "    headers=client.authorization_header)\n",
-    "taboola_states = jmespath.search('results[].name',resp.json(),)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 259,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Mac_OS_X', 'Linux', 'Windows', 'iOS', 'iPadOS', 'Android']"
-      ]
-     },
-     "execution_count": 259,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "taboola_os"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 147,
    "metadata": {},
    "outputs": [
@@ -6884,23 +6826,8 @@
     "print(\"|065_accnt_camps|:\",len(O65_accnt_camps))\n",
     "\n",
     "test_accnt_camps = accnt_camps(id2accnt[TEST_ACCNT_ID])\n",
-    "print(\"|test_accnt_camps|\",len(test_accnt_camps))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 220,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|active campaigns|: 5\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(\"|test_accnt_camps|\",len(test_accnt_camps))\n",
+    "\n",
     "import itertools\n",
     "cross = itertools.product\n",
     "import jmespath\n",
@@ -7019,79 +6946,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
-    "o65_camp_svc = CampaignService(client,O65_ACCNT_ID)\n",
-    "test_camp_svc = CampaignService(client,TEST_ACCNT_ID)\n",
-    "test_accnt_camps = aid2cid2camp[TEST_ACCNT_ID].values()\n",
-    "test_accnt_camp_names = {c[\"name\"] for c in test_accnt_camps}\n",
-    "print(\"|test_accnt_camps|:\",len(test_accnt_camps))\n",
-    "def copy_campaign_base(camp,to=TEST_ACCNT_ID):\n",
-    "    taboola_req_fields = [\n",
-    "    \"name\",\"branding_text\",\"cpc\",\"spending_limit\",\n",
-    "    \"spending_limit_model\",\"marketing_objective\"]\n",
-    "    camp_svc = CampaignService(client,to)\n",
-    "    camp_base = {f: camp[f] for f in taboola_req_fields}\n",
-    "    camp_copy = camp_svc.create(**camp_base)\n",
-    "    print(f\"created base for `{camp['name']}` in account `{to}` w/ id:\", camp_copy[\"id\"])\n",
-    "    camp_copy = camp_svc.update(camp_copy[\"id\"], is_active=False)\n",
-    "    assert camp_copy[\"is_active\"] == False\n",
-    "    print(\"...succesfully deactivated newly created campaign\")\n",
-    "    return camp_copy\n",
-    "for camp in active_camps:\n",
-    "    # skip already created test account campaigns\n",
-    "    if camp[\"name\"] in test_accnt_camp_names: \n",
-    "    print(f\"Campaign `{camp['name']}` already exists in account `{TEST_ACCNT_ID}`\")\n",
-    "    else:\n",
-    "    camp_copy = copy_campaign_base(camp,to=TEST_ACCNT_ID)\n",
-    "#%%\n",
-    "#%%\n",
-    "[c[\"status\"] for c in test_accnt_camps]\n",
-    "#%%\n",
-    "def get_camp_by_name(name,accnt=TEST_ACCNT_ID):\n",
-    "    # TODO: figure out some way to avoid having to refetch all campaigns\n",
-    "    #       => will be able to use catalog tables eventually\n",
-    "    camp_svc = CampaignService(client, accnt)\n",
-    "    camps = camp_svc.list()\n",
-    "    match_camps = [c for c in camps if c[\"name\"] == name]\n",
-    "    assert len(match_camps) == 1, (name,len(match_camps))\n",
-    "    return match_camps[0]\n",
-    "import pytaboola\n",
-    "pytaboola.errors.TaboolaError\n",
-    "import traceback\n",
-    "import tqdm\n",
-    "field_update_attempts = {}\n",
-    "field_update_errors = {}\n",
-    "def update_fields(camp,accnt,camp_id):    \n",
-    "    camp_svc = CampaignService(client, accnt)\n",
-    "    for k,attr in tqdm.tqdm([*camp.items()]):\n",
-    "    # print(f\"attempting to copy over field `{k}`...\")\n",
-    "    try:\n",
-    "        camp_svc.update(camp_id,**{k: attr})\n",
-    "        field_update_attempts.setdefault(k,[]).append(1)\n",
-    "        # print(\"...Sucess!\")\n",
-    "    except (Exception,pytaboola.errors.TaboolaError) as ex:\n",
-    "        errd = {\n",
-    "        \"ex\": ex,\n",
-    "        \"type\": type(ex),\n",
-    "        \"str\": str(ex),\n",
-    "        \"tb\": traceback.format_exc()\n",
-    "        }\n",
-    "        # print(f\"Failed w/ {type(ex)}:{ex}\\n{traceback.format_exc()}\")\n",
-    "        # print(f\"Failed w/ {type(ex)}:{ex}\")\n",
-    "        field_update_attempts.setdefault(k, []).append(0)\n",
-    "        field_update_attempts.setdefault(k, []).append(errd)\n",
+    "import json\n",
+    "TABOOLA_HC_CREDS = json.loads(os.getenv(\"TABOOLA_HC_CREDS\"))\n",
+    "TABOOLA_PIVOT_CREDS = json.loads(os.getenv(\"TABOOLA_PIVOT_CREDS\"))\n",
     "\n",
-    "for camp in active_camps:\n",
-    "    dest_camp = get_camp_by_name(camp[\"name\"])\n",
-    "    dest_id = dest_camp[\"id\"]\n",
-    "    print(\"UPDATEING\",camp[\"name\"],dest_id)\n",
-    "    update_fields(camp,TEST_ACCNT_ID,dest_id)\n",
+    "from pytaboola import TaboolaClient\n",
+    "client = TaboolaClient(**TABOOLA_HC_CREDS)\n",
+    "client.token_details\n",
     "\n",
-    "update_attempt_df = pd.DataFrame(field_update_attempts)\n",
-    "update_attempt_df.mean(axis=0)"
+    "import requests\n",
+    "import jmespath\n",
+    "TABOOLA_BASE = \"https://backstage.taboola.com/backstage/api/1.0\"\n",
+    "resp = requests.get(\n",
+    "    f\"{TABOOLA_BASE}/resources/campaigns_properties/operating_systems\",\n",
+    "    headers=client.authorization_header)\n",
+    "taboola_os = jmespath.search('results[].name',resp.json(),)\n",
+    "\n",
+    "resp = requests.get(\n",
+    "    f\"{TABOOLA_BASE}/resources/campaigns_properties/platforms\",\n",
+    "    headers=client.authorization_header)\n",
+    "taboola_platforms = jmespath.search('results[].name', resp.json(),)\n",
+    "\n",
+    "resp = requests.get(\n",
+    "    f\"{TABOOLA_BASE}/resources/countries/us/dma\",\n",
+    "    headers=client.authorization_header)\n",
+    "taboola_dmas = jmespath.search('results[].name',resp.json(),)\n",
+    "\n",
+    "resp = requests.get(\n",
+    "    f\"{TABOOLA_BASE}/resources/countries/us/regions\",\n",
+    "    headers=client.authorization_header)\n",
+    "taboola_states = jmespath.search('results[].name',resp.json(),)"
    ]
   },
   {
